feat: init book admin page

--- a/Edportal/Views/Shared/_AdminLayout.cshtml
+++ b/Edportal/Views/Shared/_AdminLayout.cshtml
@@ -44,7 +44,7 @@
                     <a href="~/Admin/User/Index"><i class="icon-page icon-chart-admin"></i>User</a>
                 </li>
                 <li class="menu-item">
-                    <a href="~/Admin/User/Index"><i class="icon-page icon-chart-admin"></i>University</a>
+                    <a href="~/Admin/Book/Index"><i class="icon-page icon-chart-admin"></i>Book</a>
                 </li>
             </ul>
         </div>
