feat: init homepage

--- a/Edportal/Views/Home/Index.cshtml
+++ b/Edportal/Views/Home/Index.cshtml
@@ -1,22 +1,144 @@
-﻿@{
-    ViewData["Title"] = "Home test Page";
+﻿@section Schema {
+    <script type="application/ld+json">
+    [
+        {
+            "@@context": "https://schema.org",
+            "@@type": "Organization",
+            "name": "SABA Sports",
+            "url": "https://www.sabavn.net/",
+            "logo": "https://www.sabavn.net/images/sabasports.svg",
+            "description": "SABAVN.net cung cấp tin tức bóng đá và thông tin thể thao, bao gồm cập nhật trực tiếp, nhận định, video nổi bật, và thông tin hậu trường từ thế giới bóng đá và các môn thể thao khác.",
+            "sameAs": [
+                "https://www.facebook.com/sabasportsvietnam",
+                "https://www.tiktok.com/@@sabasportsvietnam",
+                "https://www.youtube.com/SABASportsVietnam",
+                "https://sites.google.com/view/sabavn/"
+            ],
+            "subjectOf": [
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/c1-champions-league-sabavn",
+                    "name": "Champions League"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/bong-da-anh-sabavn",
+                    "name": "Bóng đá Anh"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/bong-da-viet-nam-sabavn",
+                    "name": "Bóng đá Việt Nam"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/nhan-dinh-bong-da-sabavn",
+                    "name": "Nhận định bóng đá"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/lich-thi-dau/bong-da",
+                    "name": "Lịch thi đấu bóng đá, Trực tiếp bóng đá"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/hau-truong-sabavn",
+                    "name": "Hậu trường thể thao"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/chuyen-nhuong-sabavn",
+                    "name": "Tin tức chuyển nhượng"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/bong-da-tbn-sabavn",
+                    "name": "Bóng đá Tây Ban Nha"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/bong-ro-sabavn",
+                    "name": "Bóng rổ"
+                },
+                {
+                    "@@type": "WebPage",
+                    "url": "https://www.sabavn.net/euro-sabavn",
+                    "name": "Euro 2024"
+                }
+            ]
+        },
+
+        {
+            "@@context": "https://schema.org",
+            "@@type": "LocalBusiness",
+            "name": "SABA Sports",
+            "@@id": "https://www.sabavn.net/",
+            "url": "https://www.sabavn.net/",
+            "logo": "https://www.sabavn.net/images/sabasports.svg",
+            "image": "https://www.sabavn.net/images/sabasports.svg",
+            "description": "SABAVN.net - Tin tức bóng đá và thể thao mới nhất trên SABA Sports. Xem LTĐ, BXH các giải bóng đá hấp dẫn nhất hành tinh. Tin nóng bóng đá, thể thao 24/7",
+            "telephone": "0916328916",
+            "address": {
+                "@@type": "PostalAddress",
+                "streetAddress": "Số 20, Bầu Cát 6, Phường 14",
+                "addressLocality": "Tân Bình",
+                "addressRegion": "Thành phố Hồ Chí Minh",
+                "postalCode": "700000",
+                "addressCountry": "VN"
+            },
+            "openingHoursSpecification": {
+                "@@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                    "Monday",
+                    "Tuesday",
+                    "Wednesday",
+                    "Thursday",
+                    "Friday",
+                    "Saturday",
+                    "Sunday"
+                ],
+                "opens": "00:00",
+                "closes": "23:59"
+            }
+        }
+    ]
+    </script>
 }
-@* 
+
+@section Metadata {
+    <meta name="robots" content="index,follow,noarchive,max-image-preview:large" />
+    <meta name="description" content='Home description' />
+    <link rel="canonical" href="url" />
+    <link rel="alternate" href="Url" hreflang="vi-vn" />
+    <link rel="alternate" type="application/rss+xml" href="RSSUrl" title='Title' />
+}
+
+
+@section Title{
+	Home
+}
+
+
 @section Styles {
-    <environment include="Development">
-        <link rel="stylesheet" href="~/css/dev/pages/admin/index.chunk.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="~/css/pro/pages/admin/index.chunk.css" asp-append-version="true" />
-    </environment>
+    <link rel="preload stylesheet" media="all" href="~/css/pages/home.css" asp-append-version="true">
 }
 @section Scripts{
-    <environment include="Development">
-        <script src="~/js/dev/pages/admin/index.chunk.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="~/js/pro/pages/admin/index.chunk.js" asp-append-version="true"></script>
-    </environment>
-} *@
+    <script src="~/js/home.js" asp-append-version="true"></script>
+} 
 
-<div id="app-container"></div>
+@(await Component.InvokeAsync("Header", new { page = "home-page", CategorySlug = "/" }))
+<section class="main">
+    <div class="container">
+         <div class="block block-first-hot">
+            <div class="block-columns">
+            <div class="columns columns-left"></div>
+                <div class="columns columns-right">
+                    <div class="home-nav-content">
+                        <div id="fixture-homepage"></div>
+                        <div id="standing-homepage"></div>
+                    </div>
+                </div>
+            </div>
+         </div>
+    </div>
+</section
