--- a/Edportal/wwwroot/css/pages/admin/book.css
+++ b/Edportal/wwwroot/css/pages/admin/book.css
@@ -28,6 +28,12 @@
   cursor: unset;
   font-weight: normal;
 }
+.custom-input.list-input::-moz-placeholder {
+  color: #979797;
+  font-style: italic;
+  font-size: 1.4rem;
+  font-weight: normal;
+}
 .custom-input.list-input::placeholder {
   color: #979797;
   font-style: italic;
@@ -351,6 +357,12 @@
   cursor: unset;
   font-weight: normal;
 }
+.page-table-control .list-input::-moz-placeholder {
+  color: #979797;
+  font-style: italic;
+  font-size: 1.4rem;
+  font-weight: normal;
+}
 .page-table-control .list-input::placeholder {
   color: #979797;
   font-style: italic;
@@ -373,4 +385,4 @@
 
 #ViewEmailContent .modal-content {
   max-width: 100rem;
-}
+}/*# sourceMappingURL=book.css.map */
