--- a/Edportal/Views/Shared/Components/Header/Default.cshtml
+++ b/Edportal/Views/Shared/Components/Header/Default.cshtml
@@ -6,57 +6,52 @@
     </div>
     <div class="header-controls">
         <div class="container padding-mobile-none">
-            <div class="banner-euro-desktop banner-desktop-top"><a href="https://www.sabavn.net/lich-thi-dau/bong-da"><img loading="lazy" alt="Banner top" src="https://www.sabavn.net/uploads/banner/466Lịch-thi-đấu-2.png" class="img-res" width="320" height="70"></a></div>
 
             <div class="logo">
                 <a href="/">
                     <img src="/images/sabasports.svg?v=MsKCZsdq7zCHgbxR4C1agDSqvYYO-61WMFuLpYPisPw" alt="SABA Sports, tin bong da, tin the thao, ltd bong da" width="120" height="55">
                 </a>
             </div>
-            <ul class="header-auth-provider">
-                <li class="item-control languages-box">
-                    <div class="language-select"><span class="flag flag-vn"></span><span class="country">Tiếng Việt</span></div>
-                    <ul class="languages-list">
-                        <li><a class="lang-item" href="https://www.sabasports.com.cn/"><span class="flag flag-cn"></span><span>简体中文</span></a>
-                        </li><li>
-                            <a class="lang-item" href="https://www.thesabamynews.com/"><span class="flag flag-en"></span><span>English</span></a>
+            <div class="search-desktop">
+                <form method="get" action="" class="Form " id="SearchForm">
+                    <input type="text" value="" name="discipline" class="search-box" placeholder="Search" autocomplete="off" > 
+                    <button type="submit" class="search-button">Search</button>
+                </form>
+            </div>
+            <div class="top-header">
+                <div class="group-menu">
+                <div class="nav-menu">
+                    <ul class="main-menu-pc">
+                        <li class="menu-item has-sub"><span class="submenu-button"> <i class="icon-chevron-down"></i> </span>
+                            <a href="/bong-da-anh-sabavn" class="item " title="Anh">Giới thiệu</a>
+                            <ul>
+                                <li>
+                                    <a href="/dt-anh-sabavn">Câu chuyện</a>
+                                </li>
+                                <li>
+                                    <a href="/ngoai-hang-anh-sabavn">Tuyển dụng</a>
+                                </li>
+                                <li>
+                                    <a href="/nhan-dinh-ngoai-hang-anh-sabavn">Sứ mệnh</a>
+                                </li>
+                            </ul>
                         </li>
-                        <li>
-                            <a class="lang-item" href="https://www.sabasports.in/"><span class="flag flag-in"></span><span>India</span></a>
+                        <li class="menu-item ">
+                            <a href="/ngoai-hang-anh-sabavn" class="item " title="Ngoại hạng Anh">Điểm chuẩn trường</a>
                         </li>
-                        <li>
-                            <a class="lang-item" href="https://www.thesabasportsindo.com/"><span class="flag flag-ind"></span><span>Indonesia</span></a>
+                        <li class="menu-item ">
+                            <a href="https://www.sabavn.net/tag/game-fantasy" class="item " title="Game Fantasy">Tin tức</a>
                         </li>
-                        <li>
-                            <a class="lang-item" href="https://www.sabanews-th.com/"><span class="flag flag-th"></span><span>Thailand</span></a>
-                        </li>
+                        <li class="menu-item contact-menu"><a class="item" href="/cup-nha-vua-tbn-sabavn">Liên hệ</a></li>
                     </ul>
-                </li>
-                <li class="item-control search-desktop search-input">
-                    <form action="/Search" method="post" id="search">
-                        <input class="keyword-input search-box" id="search-keyword" type="text" placeholder="Tìm kiếm..." fdprocessedid="vshkyc">
-                        <button type="submit" class="btn btn-search" aria-label="search" fdprocessedid="a9rfb">
-                            <i class="icon-search"></i>
-                        </button>
-                    </form>
-                </li>
-
-                <li class="item-control notification-auth">
-                    <span class="bell">
-                        <a href="#" class="auth-bell"><i class="icon-bell"></i></a>
-                        <a href="#" class="number-bell">10</a>
-                    </span>
-                </li>
-
-                <li class="item-control auth-input">
-                        <a class="item auth-login" href="javascript:;">Đăng nhập</a>
-                </li>
-            </ul>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
 </div>
 
-<div class="top-header">
+@* <div class="top-header">
     <div class="container padding-mobile-none">
         <div class="group-menu">
             <div class="nav-menu">
@@ -621,7 +616,7 @@
         </div>
 
     </div>
-</div>
+</div> *@
 
 @* Mobile header menu *@
 <div class="child-mobile-menu">
