--- a/Edportal/wwwroot/css/pages/home.scss
+++ b/Edportal/wwwroot/css/pages/home.scss
@@ -4,13 +4,13 @@
 
 @import '../layout/footer';
 @import '../layout/header';
-
+@import '../components/container';
 // @import '../components/fonts';
 // @import '../components/block';
 // @import '../components/img';
 // @import '../components/buttons';
 // @import '../components/swipper';
-// @import '../components/container';
+
 // @import '../components/list-content';
 
 // @import '../components/_card-horizontal';
