--- a/Edportal/wwwroot/css/pages/admin/admin.css
+++ b/Edportal/wwwroot/css/pages/admin/admin.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-family: Open Sans, sans-serif;
   color: #222;
   line-height: 2.2rem;
@@ -300,4 +300,4 @@ body {
 .nodata_table {
   color: #f00 !important;
   text-align: center;
-}/*# sourceMappingURL=admin.css.map */
+}
