--- a/Edportal/www/sources/css/pages/admin/index.scss
+++ b/Edportal/www/sources/css/pages/admin/index.scss
@@ -77,10 +77,10 @@ body {
     align-items: end;
 }
 
-.filter-items .input-wrapper {
-    min-width: 225px;
-    max-width: 250px;
-}
+// .filter-items .input-wrapper {
+//     min-width: 225px;
+//     max-width: 250px;
+// }
 
 .filter-items .self-end {
     margin: 0 0 0 auto;
